# MyTinyrenderer

./: .gitignore  CMakeLists.txt  main.cpp  model.cpp  model.h  readme.md  run.sh  tgaimage.cpp  tgaimage.h
